# aster-cli

./: .gitignore  Cargo.toml  README.md  preferences.json  preferences_real.json  test.rs  todo.txt
src/: drawing.rs  events.rs  gui.rs  main.rs  parser.rs  prompt.rs  server.rs  servernetwork.rs
src/api/: mod.rs
test-avatars/: compare.py  display_image.sh
themes/: cmus.json  default.json
