[package]
name = "cli"
version = "0.1.0"
authors = ["Jachdich <jamesedkitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
futures = "*"
tokio = { version = "*", features = ["full", "tracing"] }
tokio-util = { version = "*", features = ["full"] }
tokio-stream = { version = "*" }
tokio-native-tls = "*"
native-tls = "*"
json = "*"
regex = "*"
dirs = "*"
