[package]
name = "cli"
version = "0.1.0"
authors = ["Jachdich <jamesedkitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
futures = "*"
tokio = { version = "*", features = ["full", "tracing"] }
tokio-util = { version = "*", features = ["full"] }
tokio-stream = { version = "*" }
tokio-native-tls = "*"
native-tls = "*"
regex = "*"
dirs = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
base64 = "*"
image = "0.24.6"
dct-tiv = { git = "https://github.com/Jachdich/dct-tiv" }
fmtstring = { git = "https://github.com/Jachdich/fmtstring" }
notify-rust = { version = "4.11.0", default-features = false, features = ["d"] }

